--- a/assets/style.css
+++ b/assets/style.css
@@ -17,7 +17,9 @@ body{
 	position:fixed;
 	text-align:right;
 	padding-right:20px;
-	height:120px;
+	height:90px;
+	border:2px;
+	border-color:#cccccc;
 
 	background-color:white;
 	z-index: 1;
@@ -27,6 +29,7 @@ body{
 	width:600px;
 	margin:0 auto 0 auto;
 	padding: 20px;
+	background-color: #ffffff;
 }
 p{
 
