--- a/assets/style.css
+++ b/assets/style.css
@@ -17,7 +17,8 @@ body{
 	position:fixed;
 	text-align:right;
 	padding-right:20px;
-	height:90px;
+	padding-top:20px;
+	height:70px;
 	border:2px;
 	border-color:#cccccc;
 
@@ -26,17 +27,26 @@ body{
 }
 
 .wrapper{
+	position:relative;
 	width:600px;
+	margin-top: 200px;
 	margin:0 auto 0 auto;
 	padding: 20px;
 	background-color: #ffffff;
 }
-p{
 
+p, #nav, #aboutMe {
+	font-family: 'Arial', 'Helvetica Neue', 'Hlevetica', sans-serif;
+	color:#777777;
+}
+
+#name, #aboutHead{
+	font-family: 'Georgia', Times, Times New Roman, serif;
 }
 
 #aboutMe{
-
+	position:relative;
+	margin-top:70px;
 
 }
 #aboutNav{
