--- a/assets/style.css
+++ b/assets/style.css
@@ -2,20 +2,26 @@ body{
 	background-image:url("https://i.imgur.com/lQzyx2A.png");
 }
 
-h4{
+#nav1{
 	text-decoration: none;
 	display: inline;
+	color:#777777;
 }
-h4:hover{
+#nav1:hover{
 color:#4aaaa5;
 }
 #name{
+	padding-left:5px;
+	padding-right:5px;
 	position:fixed;
 	left:75px;
 	top:10px;
 	color:#ffffff;
 	background-color:#4aaaa5;
 	z-index: 2;
+}
+#name:hover{
+	background-color:#f4428f;
 }
 #nav{
 	right:0;
@@ -26,7 +32,7 @@ color:#4aaaa5;
 	padding-right:20px;
 	padding-top:20px;
 	height:70px;
-	border:2px;
+	border:5px;
 	border-color:#cccccc;
 
 	background-color:white;
@@ -56,6 +62,17 @@ p, #nav, #aboutMe {
 	margin-top:70px;
 
 }
+#bender{
+	position:relative;
+	margin-top:70px;
+}
 #aboutNav{
 
+}
+
+#rabbit{
+    height: auto; 
+    width: auto; 
+    max-width: 400px; 
+    max-height: 400px;
 }
