--- a/assets/style.css
+++ b/assets/style.css
@@ -10,6 +10,12 @@ body{
 #nav1:hover{
 color:#4aaaa5;
 }
+#aboutHead{
+	font-size:36px;
+	color:#4aaaa5;
+	border-bottom-style: solid;
+	padding-bottom: 20px;
+}
 #name{
 	padding-left:5px;
 	padding-right:5px;
@@ -24,28 +30,31 @@ color:#4aaaa5;
 	background-color:#f4428f;
 }
 #nav{
+	width:100%;
 	right:0;
 	top:0;
 	left:0;
+	padding-right:20px;
 	position:fixed;
 	text-align:right;
-	padding-right:20px;
-	padding-top:20px;
-	height:70px;
-	border:5px;
+	padding-top:40px;
+	height:50px;
+	border-bottom-style: solid;
 	border-color:#cccccc;
-
 	background-color:white;
 	z-index: 1;
 }
 
 .wrapper{
 	position:relative;
-	width:600px;
-	margin-top: 200px;
-	margin:0 auto 0 auto;
+	width:960px;
+	margin:150px auto 0 auto;
 	padding: 20px;
 	background-color: #ffffff;
+}
+#content{
+
+
 }
 
 p, #nav, #aboutMe {
@@ -59,14 +68,69 @@ p, #nav, #aboutMe {
 
 #aboutMe{
 	position:relative;
-	margin-top:70px;
+	margin-top:20px;
+	margin-bottom:70px;
 
 }
 #bender{
-	position:relative;
-	margin-top:70px;
+	display:inline;
+
 }
+#benderThumb{
+position:left;
+	border: 5px;
+	height: auto;
+	width: auto;
+	max-width: 300px;
+	max-height: 300px;
+}
+#benderBanner{
+
+	width:300px;
+	margin-top:200px;
+	font-size:36px;
+	position:absolute;
+	color:#ffffff;
+	background-color:#4aaaa5;
+	z-index:2;
+}
+#benderBanner:hover{
+background-color:#f4428f;
+}
+/* */
+.thumbs{
+	display:inline;
+}
+#kingGizz{
+	margin-left:50px;
+	display:inline;
+}
+#kingGizzThumb{
+	margin-left:20px;
+	height: auto;
+	width: auto;
+	max-width: 300px;
+	max-height: 300px;
+	z-index:1;
+}
+#kingGizzBanner{
+	display:inline;
+	width:300px;
+	margin-top:200px;
+	font-size:36px;
+	position:absolute;
+	color:#ffffff;
+	background-color:#4aaaa5;
+	z-index:2;
+}
+#kingGizzBanner:hover{
+background-color:#f4428f;
+}
+
+
+
 #aboutNav{
+
 
 }
 
@@ -75,4 +139,27 @@ p, #nav, #aboutMe {
     width: auto; 
     max-width: 400px; 
     max-height: 400px;
+}
+
+footer{
+	right:0;
+	bottom:0;
+	left:0;
+	position:fixed;
+	padding-right:20px;
+	padding-top:20px;
+	height:70px;
+	border:5px;
+	border-color:#cccccc;
+	background-color:#666666;
+	text-align:center;
+}
+ul{
+
+}
+
+aside{
+	float:right;
+	right:0;
+	margin-top:70px;
 }
