--- a/assets/style.css
+++ b/assets/style.css
@@ -30,7 +30,6 @@ color:#4aaaa5;
 	background-color:#f4428f;
 }
 #nav{
-	width:100%;
 	right:0;
 	top:0;
 	left:0;
@@ -46,15 +45,16 @@ color:#4aaaa5;
 }
 
 .wrapper{
-	position:relative;
 	width:960px;
+
+}
+#content{
+	display:inline;
+	left:0;
+	width:650px;
 	margin:150px auto 0 auto;
 	padding: 20px;
 	background-color: #ffffff;
-}
-#content{
-
-
 }
 
 p, #nav, #aboutMe {
@@ -67,26 +67,26 @@ p, #nav, #aboutMe {
 }
 
 #aboutMe{
-	position:relative;
 	margin-top:20px;
 	margin-bottom:70px;
 
 }
 #bender{
 	display:inline;
-
+	/*margin-left: 100px;*/
 }
 #benderThumb{
-position:left;
-	border: 5px;
-	height: auto;
-	width: auto;
-	max-width: 300px;
-	max-height: 300px;
+	margin-left: 100px;
+	border-style:solid;
+	border-width:5px;
+	border-color:#4aaaa5;
+	position:left;
+	width: 300px;
+	height: 300px;
 }
 #benderBanner{
-
-	width:300px;
+	margin-left: 100px;
+	width:310px;
 	margin-top:200px;
 	font-size:36px;
 	position:absolute;
@@ -102,20 +102,21 @@ background-color:#f4428f;
 	display:inline;
 }
 #kingGizz{
-	margin-left:50px;
+	margin-left:100px;
 	display:inline;
 }
 #kingGizzThumb{
-	margin-left:20px;
-	height: auto;
-	width: auto;
-	max-width: 300px;
-	max-height: 300px;
+	border-style:solid;
+	border-width:5px;
+	border-color:#4aaaa5;
+	margin-left:px;
+	width: 300px;
+	height: 300px;
 	z-index:1;
 }
 #kingGizzBanner{
 	display:inline;
-	width:300px;
+	width:310px;
 	margin-top:200px;
 	font-size:36px;
 	position:absolute;
@@ -127,18 +128,44 @@ background-color:#f4428f;
 background-color:#f4428f;
 }
 
-
-
-#aboutNav{
-
+#mouse{
+	display:inline;
 
 }
+#mouseThumb{
+	margin-top: 100px;
+	margin-left: 100px;
+	border-style:solid;
+	border-width:5px;
+	border-color:#4aaaa5;
+	position:left;
+	width: 300px;
+	height: 300px;
+}
+#mouseBanner{
+	margin-left: 100px;
+	width:310px;
+	margin-top:300px;
+	font-size:36px;
+	position:absolute;
+	color:#ffffff;
+	background-color:#4aaaa5;
+	z-index:2;
+}
+#mouseBanner:hover{
+background-color:#f4428f;
+}
+
 
 #rabbit{
-    height: auto; 
-    width: auto; 
-    max-width: 400px; 
-    max-height: 400px;
+    width: 400px; 
+    height: 300px;
+}
+#laptop{
+	position:relative;
+	margin-left: 75px;
+	width: 400px; 
+    height: 300px;
 }
 
 footer{
@@ -159,7 +186,8 @@ ul{
 }
 
 aside{
-	float:right;
-	right:0;
-	margin-top:70px;
+
+	height: 200px;
+	width: 400px;
+    background-color:#ffffff;
 }
