--- a/assets/style.css
+++ b/assets/style.css
@@ -10,7 +10,7 @@ body{
 #nav1:hover{
 color:#4aaaa5;
 }
-#aboutHead{
+#aboutHead, #portHead{
 	font-size:36px;
 	color:#4aaaa5;
 	border-bottom-style: solid;
@@ -57,16 +57,16 @@ color:#4aaaa5;
 	background-color: #ffffff;
 }
 
-p, #nav, #aboutMe {
+p, #nav, #aboutMe, #portfolio {
 	font-family: 'Arial', 'Helvetica Neue', 'Hlevetica', sans-serif;
 	color:#777777;
 }
 
-#name, #aboutHead{
+#name, #aboutHead, #portHead{
 	font-family: 'Georgia', Times, Times New Roman, serif;
 }
 
-#aboutMe{
+#aboutMe, #portHead{
 	margin-top:20px;
 	margin-bottom:70px;
 
@@ -191,3 +191,42 @@ aside{
 	width: 400px;
     background-color:#ffffff;
 }
+
+
+input[type=text], select, textarea {
+    width: 100%; /* Full width */
+    padding: 12px; /* Some padding */  
+    border: 1px solid #ccc; /* Gray border */
+    border-radius: 4px; /* Rounded borders */
+    box-sizing: border-box; /* Make sure that padding and width stays in place */
+    margin-top: 6px; /* Add a top margin */
+    margin-bottom: 16px; /* Bottom margin */
+    resize: vertical /* Allow the user to vertically resize the textarea (not horizontally) */
+}
+
+/* Style the submit button with a specific background color etc */
+input[type=submit] {
+    background-color: #4CAF50;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+/* When moving the mouse over the submit button, add a darker green color */
+input[type=submit]:hover {
+    background-color: #45a049;
+}
+
+/* Add a background color and some padding around the form */
+.container {
+    border-radius: 5px;
+    background-color: #f2f2f2;
+    padding: 20px;
+}
+
+.contact{
+	margin-top: 150px;
+}
+
