--- a/app/views/home.ejs
+++ b/app/views/home.ejs
@@ -47,8 +47,8 @@
                 <%} else {%>
                 <li><a href="/auth/login">Login</a></li>
                 <%} %> -->
-                <li><a href="/">Contact</a></li>
-                <li><a href="/portfoli">Profile</a></li>
+                <li><a href="/">Homepage</a></li>
+                <li><a href="/portfolio">Profile</a></li>
                 <li><a href="/contacts">Meetups</a></li>
                 <li><a href="/about">Forums</a></li>
                 <li><h1>Tyler J. Sweeney Portfolio</h1></li>
@@ -56,12 +56,13 @@
             
         </nav>
         <header>
-            <h1>Ways to get in contact with me</h1>
-            
+            <h1>This is my full-stack portfolio</h1>
+            <h2>Inside you will find a list of personal and group projecst that I have worked on</h2>
         </header>
         <main>
-            <p>Email</p>
-            <p>Phone Number</p>
+            <p>Javascript</p>
+            <p>React</p>
+            <p>Mongo</p>
         </main>
 
     </body>
