--- a/app/views/porfolio.ejs
+++ b/app/views/porfolio.ejs
@@ -47,8 +47,8 @@
                 <%} else {%>
                 <li><a href="/auth/login">Login</a></li>
                 <%} %> -->
-                <li><a href="/">Homepage</a></li>
-                <li><a href="/portfoli">Profile</a></li>
+                <li><a href="/">Contact</a></li>
+                <li><a href="/portfolio">Profile</a></li>
                 <li><a href="/contacts">Meetups</a></li>
                 <li><a href="/about">Forums</a></li>
                 <li><h1>Tyler J. Sweeney Portfolio</h1></li>
@@ -56,13 +56,13 @@
             
         </nav>
         <header>
-            <h1>This is my full-stack portfolio</h1>
-            <h2>Inside you will find a list of personal and group projecst that I have worked on</h2>
+            <h1>Tyler Sweeney's Portfolio</h1>
+            <h2>This is the list of apps I have created or been part of a team in creating</h2>
         </header>
         <main>
-            <p>Javascript</p>
-            <p>React</p>
-            <p>Mongo</p>
+            <p>Bender's Blackjack (Python)</p>
+            <p>Beer Me (Responsive website</p>
+            <p>Spaceballs RPG game</p>
         </main>
 
     </body>
