--- a/app/views/about.ejs
+++ b/app/views/about.ejs
@@ -48,7 +48,7 @@
                 <li><a href="/auth/login">Login</a></li>
                 <%} %> -->
                 <li><a href="/">Homepage</a></li>
-                <li><a href="/portfoli">Profile</a></li>
+                <li><a href="/portfolio">Profile</a></li>
                 <li><a href="/contacts">Meetups</a></li>
                 <li><a href="/about">Forums</a></li>
                 <li><h1>Tyler J. Sweeney Portfolio</h1></li>
