--- a/app/views/contact.ejs
+++ b/app/views/contact.ejs
@@ -48,7 +48,7 @@
                 <li><a href="/auth/login">Login</a></li>
                 <%} %> -->
                 <li><a href="/">Contact</a></li>
-                <li><a href="/portfoli">Profile</a></li>
+                <li><a href="/portfolio">Profile</a></li>
                 <li><a href="/contacts">Meetups</a></li>
                 <li><a href="/about">Forums</a></li>
                 <li><h1>Tyler J. Sweeney Portfolio</h1></li>
@@ -56,13 +56,12 @@
             
         </nav>
         <header>
-            <h1>Tyler Sweeney's Portfolio</h1>
-            <h2>This is the list of apps I have created or been part of a team in creating</h2>
+            <h1>Ways to get in contact with me</h1>
+            
         </header>
         <main>
-            <p>Bender's Blackjack (Python)</p>
-            <p>Beer Me (Responsive website</p>
-            <p>Spaceballs RPG game</p>
+            <p>Email</p>
+            <p>Phone Number</p>
         </main>
 
     </body>
