--- a/app/views/home.ejs
+++ b/app/views/home.ejs
@@ -48,9 +48,9 @@
                 <li><a href="/auth/login">Login</a></li>
                 <%} %> -->
                 <li><a href="/">Homepage</a></li>
-                <li><a href="/portfoli">Profile</a></li>
-                <li><a href="/contacts">Meetups</a></li>
-                <li><a href="/about">Forums</a></li>
+                <li><a href="/portfolio">Profile</a></li>
+                <li><a href="/contacts">Constact</a></li>
+                <li><a href="/about">About</a></li>
                 <li><h1>Tyler J. Sweeney Portfolio</h1></li>
             </ul>
             
