--- a/app/views/about.ejs
+++ b/app/views/about.ejs
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>OAuth</title>
+        <title>Tyler J. Sweeney Portfolio</title>
         <style>
             body{
                 font-family: arial;
@@ -47,22 +47,22 @@
                 <%} else {%>
                 <li><a href="/auth/login">Login</a></li>
                 <%} %> -->
-                <li><a href="/">Homepage</a></li>
-                <li><a href="/portfolio">Profile</a></li>
-                <li><a href="/contacts">Meetups</a></li>
-                <li><a href="/about">Forums</a></li>
+                <li><a href="/">Home</a></li>
+                <li><a href="/portfolio">Portfolio</a></li>
+                <li><a href="/contact">Contact</a></li>
+                <li><a href="/about">About</a></li>
                 <li><h1>Tyler J. Sweeney Portfolio</h1></li>
             </ul>
             
         </nav>
         <header>
-            <h1>We Are Still Cool App</h1>
-            <h2>Make friends with other parents, because we are still cool</h2>
+            <h1>About Me</h1>
+            <h2>My name is Tyler Sweeney and I am a full-stack web developer</h2>
         </header>
         <main>
-            <p>Friends</p>
-            <p>Events</p>
-            <p>Community</p>
+            <p>Adobe Photoshop</p>
+            <p>Adobe Premiere</p>
+            <p>My youtube channel</p>
         </main>
 
     </body>
