--- a/app/views/home.ejs
+++ b/app/views/home.ejs
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>OAuth</title>
+        <title>Tyler J. Sweeney Portfolio</title>
         <style>
             body{
                 font-family: arial;
@@ -47,9 +47,9 @@
                 <%} else {%>
                 <li><a href="/auth/login">Login</a></li>
                 <%} %> -->
-                <li><a href="/">Homepage</a></li>
-                <li><a href="/portfolio">Profile</a></li>
-                <li><a href="/contacts">Constact</a></li>
+                <li><a href="/">Home</a></li>
+                <li><a href="/portfolio">Portfolio</a></li>
+                <li><a href="/contact">Contact</a></li>
                 <li><a href="/about">About</a></li>
                 <li><h1>Tyler J. Sweeney Portfolio</h1></li>
             </ul>
