--- a/app/views/portfolio.ejs
+++ b/app/views/portfolio.ejs
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>OAuth</title>
+        <title>Tyler J. Sweeney Portfolio</title>
         <style>
             body{
                 font-family: arial;
