fix portfolio route

--- a/app/views/portfolio.ejs
+++ b/app/views/portfolio.ejs
@@ -47,10 +47,10 @@
                 <%} else {%>
                 <li><a href="/auth/login">Login</a></li>
                 <%} %> -->
-                <li><a href="/">Contact</a></li>
-                <li><a href="/portfolio">Profile</a></li>
-                <li><a href="/contacts">Meetups</a></li>
-                <li><a href="/about">Forums</a></li>
+                <li><a href="/">Home</a></li>
+                <li><a href="/portfolio">Portfolio</a></li>
+                <li><a href="/contact">Contact</a></li>
+                <li><a href="/about">About</a></li>
                 <li><h1>Tyler J. Sweeney Portfolio</h1></li>
             </ul>
             
