--- a/app/views/home.ejs
+++ b/app/views/home.ejs
@@ -5,11 +5,13 @@
         <title>Tyler J. Sweeney Portfolio</title>
         <style>
             body{
+                background:#FFF3F4;
                 font-family: arial;
                 margin: 0;
             }
             nav{
-                background: #53a575;
+                background-image: url("https://d2gg9evh47fn9z.cloudfront.net/800px_COLOURBOX23894331.jpg");
+                /* background: #53a575; */
                 padding: 20px 10px;
             }
             nav ul{
@@ -23,9 +25,9 @@
                 margin: 0 10px 0 0;
             }
             nav a{
-                color: #fff;
+                color: rgb(212, 200, 24);
                 font-size: 14px;
-                background: rgba(255,255,255,0.2);
+                background: rgba(63,191,191,0.5);
                 text-decoration: none;
                 padding: 10px;
                 display: block;
