--- a/app/views/contact.ejs
+++ b/app/views/contact.ejs
@@ -85,8 +85,8 @@
             
         </header>
         <main>
-            <p>Email</p>
-            <p>Phone Number</p>
+            <p>tjs@tylerjsweeney.com</p>
+            <p>(714) 501-6400</p>
         </main>
         </div>
         </wrapper>
