--- a/app/views/portfolio.ejs
+++ b/app/views/portfolio.ejs
@@ -88,7 +88,7 @@
             <h2>This is the list of apps I have created or been part of a team in creating</h2>
         </header>
         <main>
-            <a href = "http://www.wearestillcool.com"><img id="stillCool" src="./images/stillcool.png" alt = "still cool">
+            <a href = "http://www.wearestillcool.com"><img id="stillCool" src="./images/stillcool.png" alt = "still cool"></a>
             <p>We Are Still Cool Web Application</p>
             <p>Beer Me (Responsive website</p>
             <p>Spaceballs RPG game</p>
