add gitignore for keys

--- a/app/views/home.ejs
+++ b/app/views/home.ejs
@@ -7,11 +7,11 @@
     <body>
         <header id="masthead">
         <div class="container">
-            <a href="index.html" id="logo">Tyler Sweeney</a>
+            <a href="home.html" id="logo">Tyler Sweeney</a>
             <nav>
-                <a href="index.html">About</a>
-                <a href="portfolio.html">Portfolio</a>
-                <a href="contact.html">Contact</a>
+                <a href="about.ejs">About</a>
+                <a href="portfolio.ejs">Portfolio</a>
+                <a href="contact.ejs">Contact</a>
             </nav>
         </div>
         </header>
@@ -19,7 +19,7 @@
         <section class="main-section">
             <h1>About Me</h1>
 
-            <img src="assets/images/self.png" class="auth-img" alt="portrait from tech demo day">
+            <img src="public/images/self.png" class="auth-img" alt="portrait from tech demo day">
 
             <p>My name is Tyler Sweeney and I am a Full-Stack Web Developer.
             I began programming in 2015 with Python at Orange Coast College.
@@ -39,9 +39,9 @@
             <div id="connect">
                 <h2>Connect with Me</h2>
 
-                <img src="assets/images/github128.png" class="social" alt="Github">
-                <img src="assets/images/linkedin128.png" class="social" alt="LinkedIn">
-                <img src="assets/images/stackoverflow128.png" class="social" alt="Stack Overflow">
+                <img src="public/images/github128.png" class="social" alt="Github">
+                <img src="public/images/linkedin128.png" class="social" alt="LinkedIn">
+                <img src="public/images/stackoverflow128.png" class="social" alt="Stack Overflow">
             </div>
 
         </section>
