fixed routing issue, href included file extention which caused a 404

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,15 +3,16 @@
     <head>
         <meta charset="utf-8">
         <title>Tyler J. Sweeney Portfolio</title>
+        <link rel="stylesheet" href="./styles.css" type="text/css">
     </head>
     <body>
         <header id="masthead">
         <div class="container">
-            <a href="home.html" id="logo">Tyler Sweeney</a>
+            <a href="/" id="logo">Tyler Sweeney</a>
             <nav>
-                <a href="about.ejs">About</a>
-                <a href="portfolio.ejs">Portfolio</a>
-                <a href="contact.ejs">Contact</a>
+                <a href="/about">About</a>
+                <a href="/portfolio">Portfolio</a>
+                <a href="/contact">Contact</a>
             </nav>
         </div>
         </header>
@@ -19,7 +20,7 @@
         <section class="main-section">
             <h1>About Me</h1>
 
-            <img src="public/images/self.png" class="auth-img" alt="portrait from tech demo day">
+            <img src="self.png" class="auth-img" alt="portrait from tech demo day">
 
             <p>My name is Tyler Sweeney and I am a Full-Stack Web Developer.
             I began programming in 2015 with Python at Orange Coast College.
@@ -39,9 +40,9 @@
             <div id="connect">
                 <h2>Connect with Me</h2>
 
-                <img src="public/images/github128.png" class="social" alt="Github">
-                <img src="public/images/linkedin128.png" class="social" alt="LinkedIn">
-                <img src="public/images/stackoverflow128.png" class="social" alt="Stack Overflow">
+                <img src="github128.png" class="social" alt="Github">
+                <img src="linkedin128.png" class="social" alt="LinkedIn">
+                <img src="stackoverflow128.png" class="social" alt="Stack Overflow">
             </div>
 
         </section>
