--- a/views/portfolio.ejs
+++ b/views/portfolio.ejs
@@ -74,7 +74,7 @@
                 <img id=logoImg src="./images/logo2.png" alt="logo">
             <ul>
                 
-                <li><a href="/">Home</a></li>
+                <li><a href="/Home">Home</a></li>
                 <li><a href="/portfolio">Portfolio</a></li>
                 <li><a href="/contact">Contact</a></li>
                 <li><a href="/about">About</a></li>
