--- a/views/home.ejs
+++ b/views/home.ejs
@@ -40,9 +40,9 @@
             <div id="connect">
                 <h2>Connect with Me</h2>
 
-                <img src="github128.png" class="social" alt="Github">
-                <img src="linkedin128.png" class="social" alt="LinkedIn">
-                <img src="stackoverflow128.png" class="social" alt="Stack Overflow">
+                <a href="https://github.com/tylersweeney"><img src="github128.png" class="social" alt="Github"></a>
+                <a href="https://www.linkedin.com/in/tylerjsweeney/"><img src="linkedin128.png" class="social" alt="LinkedIn"></a>
+                <a href="https://stackoverflow.com/users/8525667/tyler-sweeney"><img src="stackoverflow128.png" class="social" alt="Stack Overflow"></a>
             </div>
 
         </section>
