change wrapper div to main container div, add main section and work divs

--- a/views/portfolio.ejs
+++ b/views/portfolio.ejs
@@ -8,28 +8,65 @@
     <body>
             <header id="masthead">
                     <div class="container">
-                        <a href="index.html" id="logo">Tyler Sweeney</a>
+                        <a href="/" id="logo">Tyler Sweeney</a>
                         <nav>
-                            <a href="index.html">About</a>
-                            <a href="portfolio.html">Portfolio</a>
-                            <a href="contact.html">Contact</a>
+                            <a href="about">About</a>
+                            <a href="portfolio">Portfolio</a>
+                            <a href="contact">Contact</a>
                         </nav>
                     </div>
                     </header>
-        <wrapper>
-                <div id=container>
-        <header>
-            <h1>Tyler Sweeney's Portfolio</h1>
-            <h2>This is the list of apps I have created or been part of a team in creating</h2>
-        </header>
-        <main>
-            <a href = "http://www.wearestillcool.com"><img id="stillCool" src="./images/stillcool.png" alt = "still cool"></a>
-            <p>We Are Still Cool Web Application</p>
-            <p>Beer Me (Responsive website</p>
-            <p>Spaceballs RPG game</p>
-        </main>
-        </div>
-        </wrapper>
-
+                    <div id="main-container" class="container">
+                            <section class="main-section">
+                                <h1>Portfolio</h1>
+                    
+                                <div class="work">
+                                    <img src="assets/images/hangman.PNG" class="auth-img" alt="futurama hangman game">
+                    
+                                    <h3>Hangman</h3>
+                                </div>
+                                <div class="work">
+                                    <img src="assets/images/wearestillcool.PNG" class="auth-img" alt="futurama hangman game">
+                        
+                                    <h3>We Are Still Cool</h3>
+                                </div>
+                                <div class="work">
+                                    <img src="assets/images/beerme.PNG" class="auth-img" alt="futurama hangman game">
+                            
+                                    <h3>Beer Me</h3>
+                                </div>
+                                <div class="work">
+                                    <img src="assets/images/train.PNG" class="auth-img" alt="futurama hangman game">
+                            
+                                    <h3>Train Schedule</h3>
+                                </div>    
+                    
+                                <div class="work">
+                                    <img src="assets/images/friendfinder.PNG" class="auth-img" alt="futurama hangman game">
+                                
+                                    <h3>Friend Finder</h3>
+                                </div> 
+                                <div class="work">
+                                    <img src="assets/images/nyt.PNG" class="auth-img" alt="futurama hangman game">
+                                    <h3>React NYT Scrubber</h3>
+                                </div>       
+                            </section>
+                    
+                            <section class="sidebar">
+                                <div id="connect">
+                                    <h2>Connect with Me</h2>
+                    
+                                    <img src="github128.png" class="social" alt="Github">
+                                    <img src="linkedin128.png" class="social" alt="LinkedIn">
+                                    <img src="stackoverflow128.png" class="social" alt="Stack Overflow">
+                                </div>
+                    
+                            </section>
+                            </div>
+                            <footer>
+                                <div class="container">
+                                    &copy; Copyright 2017 Tyler Sweeney
+                                </div>
+                            </footer>
     </body>
 </html>
