change nav opacity, add logo, add hover styling for nav buttons

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,12 +3,15 @@
     <head>
         <meta charset="utf-8">
         <title>Tyler J. Sweeney Portfolio</title>
+        <link rel="stylesheet" type="text/css" href="reset.css">
         <link rel="stylesheet" href="./styles.css" type="text/css">
     </head>
     <body>
         <header id="masthead">
         <div class="container">
-            <a href="/" id="logo">Tyler Sweeney</a>
+            <div id="logo-div">
+                <a href="/" id="logo"><img src="logo.png"></a>
+            </div>
             <nav>
                 <a href="/about">About</a>
                 <a href="/portfolio">Portfolio</a>
@@ -46,6 +49,42 @@
             </div>
 
         </section>
+
+        <section class="main-section">
+    
+                <img src="ext.jpg" class="auth-img" alt="portrait from tech demo day">
+    
+                <p>My name is Tyler Sweeney and I am a Full-Stack Web Developer.
+                I began programming in 2015 with Python at Orange Coast College.
+                I completed my Full-Stack Web Developer certification in April 2018.
+                A gamer since a young age when every game had to be launched from DOS,
+                my first interaction with programming was terminal commands.    
+                </p>
+    
+                <p>In the group projects that I have been a part of, the main area I worked on
+                was back-end development. In my free time I have been learning C++ and the Unreal Engine.
+                I hope to have a part in making video games, which I have been passionate about my whole life.
+                </p>
+                
+            </section>
+
+            <section class="main-section">
+    
+                    <img src="tech1.jpg" class="auth-img" alt="portrait from tech demo day">
+        
+                    <p>My name is Tyler Sweeney and I am a Full-Stack Web Developer.
+                    I began programming in 2015 with Python at Orange Coast College.
+                    I completed my Full-Stack Web Developer certification in April 2018.
+                    A gamer since a young age when every game had to be launched from DOS,
+                    my first interaction with programming was terminal commands.    
+                    </p>
+        
+                    <p>In the group projects that I have been a part of, the main area I worked on
+                    was back-end development. In my free time I have been learning C++ and the Unreal Engine.
+                    I hope to have a part in making video games, which I have been passionate about my whole life.
+                    </p>
+                    
+                </section>
         </div>
         <footer>
             <div class="container">
