--- a/views/portfolio.ejs
+++ b/views/portfolio.ejs
@@ -21,33 +21,33 @@
                                 <h1>Portfolio</h1>
                     
                                 <div class="work">
-                                    <img src="assets/images/hangman.PNG" class="auth-img" alt="futurama hangman game">
+                                    <img src="hangman.PNG" class="auth-img" alt="futurama hangman game">
                     
                                     <h3>Hangman</h3>
                                 </div>
                                 <div class="work">
-                                    <img src="assets/images/wearestillcool.PNG" class="auth-img" alt="futurama hangman game">
+                                    <img src="wearestillcool.PNG" class="auth-img" alt="futurama hangman game">
                         
                                     <h3>We Are Still Cool</h3>
                                 </div>
                                 <div class="work">
-                                    <img src="assets/images/beerme.PNG" class="auth-img" alt="futurama hangman game">
+                                    <img src="beerme.PNG" class="auth-img" alt="futurama hangman game">
                             
                                     <h3>Beer Me</h3>
                                 </div>
                                 <div class="work">
-                                    <img src="assets/images/train.PNG" class="auth-img" alt="futurama hangman game">
+                                    <img src="train.PNG" class="auth-img" alt="futurama hangman game">
                             
                                     <h3>Train Schedule</h3>
                                 </div>    
                     
                                 <div class="work">
-                                    <img src="assets/images/friendfinder.PNG" class="auth-img" alt="futurama hangman game">
+                                    <img src="friendfinder.PNG" class="auth-img" alt="futurama hangman game">
                                 
                                     <h3>Friend Finder</h3>
                                 </div> 
                                 <div class="work">
-                                    <img src="assets/images/nyt.PNG" class="auth-img" alt="futurama hangman game">
+                                    <img src="nyt.PNG" class="auth-img" alt="futurama hangman game">
                                     <h3>React NYT Scrubber</h3>
                                 </div>       
                             </section>
@@ -56,9 +56,9 @@
                                 <div id="connect">
                                     <h2>Connect with Me</h2>
                     
-                                    <img src="github128.png" class="social" alt="Github">
-                                    <img src="linkedin128.png" class="social" alt="LinkedIn">
-                                    <img src="stackoverflow128.png" class="social" alt="Stack Overflow">
+                                    <a href="https://github.com/tylersweeney"><img src="github128.png" class="social" alt="Github"></a>
+                <a href="https://www.linkedin.com/in/tylerjsweeney/"><img src="linkedin128.png" class="social" alt="LinkedIn"></a>
+                <a href="https://stackoverflow.com/users/8525667/tyler-sweeney"><img src="stackoverflow128.png" class="social" alt="Stack Overflow"></a>
                                 </div>
                     
                             </section>
