--- a/public/styles.css
+++ b/public/styles.css
@@ -3,7 +3,9 @@
 }
 
 body {
-    background: url('../images/bg.jpg');
+    background: url('bg.jpg');
+    background-repeat: repeat;
+    background-size: 120%;
     font-size: 18px;
     line-height: 34px;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
@@ -27,7 +29,7 @@ p:last-child {
 h1,h2,h3 {
     font-family: "Georgia", 'Times New Roman', Times, serif;
     font-weight: 700;
-    color: #4aaaa5;
+    color: #90CB9C;
 }
 
 h1{
@@ -42,7 +44,7 @@ h2,h3{
 }
 
 #masthead {
-    background-image: url("../images/nav1.png");
+    background-image: url("nav2.png");
     background-position:100% 100%;
     margin: 0 0 30px;
     z-index: 99;
@@ -54,37 +56,30 @@ h2,h3{
 }
 
 #logo{
-    width: 250px;
-    height: 90px;
-    background: #4aaaa5;
-    float: left;
-    font-family: 'Georgia', 'Times New Roman', Times, serif;
-    text-align: center;
-    line-height: 90px;
-    color: #fff;
-    font-weight: 700;
-    font-size: 30px;
-    text-decoration: none;
+    float:left;
 }
 
-nav {
-    float: right;
-    margin-top: 25px;
-}
-
+ nav{
+    margin-left: 647px;
+ }
 nav a{
     width: 100px;
     height: 40px;
-    background: #4aaaa5;
+    background: #90CB9C;
     color: rgb(224, 206, 45);
     text-decoration: none;
-    /* margin-left: 15px; */
+    margin-top: 80px;
+    
+    padding-top: 3px;
     display: inline-block;
     /* border-left: 1px solid #efefef; */
     /* padding-left: 15px; */
     /* line-height: 18px; */
     text-align: center;
+}
 
+nav a:hover{
+    opacity: 0.5;
 }
 
 nav a:first-child {
@@ -97,8 +92,9 @@ nav a:first-child {
 
 .main-section {
     background: #fff;
+    
     padding: 30px;
-    margin: 0 0 40px 0;
+    margin: 40px 0 40px 0;
     width: 100%;
     max-width: 650px;
     float: left;
@@ -114,6 +110,7 @@ nav a:first-child {
 }
 
 .sidebar {
+    margin-top: 40px;
     background: #fff;
     padding: 30px;
     width: 100%;
@@ -137,12 +134,16 @@ h3, .sidebar, h2 {
     margin-right: 5px
 }
 
-.social:last-child {
+.social:hover{
+    opacity:0.5;
+}
+
+.social:first-child {
     margin-right: 0;
 }
 
 footer {
-    background: #666;
+    background: #90CB9C;
     color: #fff;
     padding: 30px 0;
     clear: both;
@@ -150,6 +151,10 @@ footer {
     color: #ccc;
     font-size: 12px;
     text-align: center;
+    left: 0;
+    bottom: 0;
+    position: fixed;
+    width: 100%;
 }
 
 .work {
